# solc-bench

./: .gitignore  CLAUDE.md  README.md  flake.nix  pyproject.toml
benchmark/: 63-bench-results.json  64-bench-results.json
benchmark_data/: AaveV4HubInstance.json  BoredApeYachtClub.json  ENSRegistryWithFallback.json  EtherfiLiquidityPool.json  EulerSwap.json  FiatTokenV2_2.json  Morpho.json  OCRConfigurationStoreEVMSimple.json  OETH.json  Poap.json  PoolManager.json  RocketDepositPool.json  TetherToken.json  UniswapV3Pool.json  Vault.json  WETH9.json  benchmarks.toml  forge-std-1.16.1.json  morpho-blue-1.0.0.json  prb-math-4.1.1.json  solady-0.1.26.json  solarray-master.json  solmate-6.json  v4-core-4.0.0.json
benchmarks/: benchmarks.toml  openzeppelin-5.6.1.json
src/solc_bench/: __main__.py  benchmark.py  cli.py  compare.py  comparemany.py  config.py  extract.py  fetch.py  gas.py  host.py  metrics.py  plot.py  reporter.py  runner.py  solidity.py  sourcify.py  termplot.py
src/solc_bench/benchmarks/: benchmarks.toml
