[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solc-bench"
dynamic = ["version"]
description = "Solidity compiler benchmark tool"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
readme = "README.md"
dependencies = ["packaging", "requests>=2.31", "tomlkit"]

[project.optional-dependencies]
plot = ["seaborn>=0.12"]

[project.scripts]
solc-bench = "solc_bench.cli:main"

[tool.hatch.version]
path = "src/solc_bench/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/solc_bench"]

[tool.black]
line-length = 88
target-version = ["py311"]
